--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "@types/node": "^17.0.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/weickfer/my-jwt-package"
+  },
 }
