--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "signed-tokens",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "weickfer",
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "./build/index.js",
   "types": "./src/@types/index.d.ts",
+  "scripts": {
+    "build": "babel src --extensions \".ts\" --out-dir build --copy-files"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/node": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/node": "^17.0.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
@@ -13,5 +21,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/weickfer/my-jwt-package"
+  },
+  "dependencies": {
+    "signed-tokens": "^1.0.0"
   }
 }
